[gd_scene load_steps=23 format=3 uid="uid://cp77rgfcvcm2u"]

[ext_resource type="Script" uid="uid://ubdra8ph34sr" path="res://scenes/battle/battle.gd" id="1_kd6yx"]
[ext_resource type="Texture2D" uid="uid://cp4iq5fd6j8be" path="res://art/background.png" id="1_oub6n"]
[ext_resource type="PackedScene" uid="uid://d1o24dm7p5l82" path="res://scenes/enemy/enemy.tscn" id="2_agsc7"]
[ext_resource type="Script" uid="uid://daujeeqgpkojq" path="res://scenes/ui/hand.gd" id="2_xd4uy"]
[ext_resource type="PackedScene" uid="uid://dsbg4bb3qc4e3" path="res://scenes/player/player.tscn" id="3_agsc7"]
[ext_resource type="AudioStream" uid="uid://dpdenqqbovwfq" path="res://art/8_bit_iced_village_lofi.mp3" id="3_n6gaa"]
[ext_resource type="PackedScene" uid="uid://bjuna8v1y8fep" path="res://scenes/card_target_selector/card_target_selector.tscn" id="3_pll4o"]
[ext_resource type="Script" uid="uid://bo0jpjhklc8ap" path="res://scenes/enemy/enemy_handler.gd" id="4_kd6yx"]
[ext_resource type="Resource" uid="uid://sygadfnlild3" path="res://characters/warrior/warrior.tres" id="4_oiw7q"]
[ext_resource type="Resource" uid="uid://gshamphoy1fy" path="res://enemies/crab/crab_enemy.tres" id="5_icoan"]
[ext_resource type="Script" uid="uid://cqmehj6w23gce" path="res://scenes/ui/battle_ui.gd" id="6_icoan"]
[ext_resource type="Resource" uid="uid://bycvceajcrqfs" path="res://enemies/bat/bat_enemy.tres" id="8_mvulk"]
[ext_resource type="Script" uid="uid://2k7mmkekw4te" path="res://scenes/player/player_handler.gd" id="8_mxe8n"]
[ext_resource type="PackedScene" uid="uid://f3qiodcw2lju" path="res://scenes/card_ui/mana_ui.tscn" id="10_oiw7q"]
[ext_resource type="PackedScene" uid="uid://bqi18mygpob34" path="res://scenes/ui/tooltip.tscn" id="12_mxe8n"]
[ext_resource type="Theme" uid="uid://khyscqqmwjts" path="res://main_theme.tres" id="13_icoan"]
[ext_resource type="Script" uid="uid://connfi8qrg0l8" path="res://scenes/ui/screen_flash.gd" id="15_t1kk3"]
[ext_resource type="PackedScene" uid="uid://fbjpfdknlaau" path="res://scenes/ui/battle_over_panel.tscn" id="17_6ofp8"]
[ext_resource type="PackedScene" uid="uid://cin1q77wcxwsp" path="res://scenes/ui/card_pile_opener.tscn" id="17_fe4ja"]
[ext_resource type="Texture2D" uid="uid://dff4tru6c47vu" path="res://art/card_blank_discard.png" id="18_sgdsx"]
[ext_resource type="PackedScene" uid="uid://brb278qln4gb4" path="res://scenes/ui/card_pile_view.tscn" id="21_sgdsx"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a8boo"]
size = Vector2(256, 87)

[node name="Battle" type="Node2D"]
script = ExtResource("1_kd6yx")
char_stats = ExtResource("4_oiw7q")
battle_music = ExtResource("3_n6gaa")
metadata/_edit_lock_ = true

[node name="Background" type="Sprite2D" parent="."]
modulate = Color(0.400583, 0.369509, 0.446024, 1)
texture = ExtResource("1_oub6n")
centered = false
metadata/_edit_lock_ = true

[node name="CardDropArea" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="CardDropArea"]
position = Vector2(127, 43.5)
shape = SubResource("RectangleShape2D_a8boo")
debug_color = Color(0, 0.6, 0.701961, 0.188235)

[node name="EnemyHandler" type="Node2D" parent="."]
script = ExtResource("4_kd6yx")

[node name="BatEnemy" parent="EnemyHandler" instance=ExtResource("2_agsc7")]
position = Vector2(156, 57)
stats = ExtResource("8_mvulk")

[node name="CrabEnemy" parent="EnemyHandler" instance=ExtResource("2_agsc7")]
position = Vector2(215, 66)
stats = ExtResource("5_icoan")

[node name="Player" parent="." instance=ExtResource("3_agsc7")]
position = Vector2(46, 61)

[node name="CardTargetSelector" parent="." instance=ExtResource("3_pll4o")]

[node name="PlayerHandler" type="Node" parent="." node_paths=PackedStringArray("hand")]
script = ExtResource("8_mxe8n")
hand = NodePath("../BattleUI/Hand")

[node name="BattleUI" type="CanvasLayer" parent="." groups=["ui_layer"]]
script = ExtResource("6_icoan")

[node name="Hand" type="HBoxContainer" parent="BattleUI"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -75.0
offset_top = -30.0
offset_right = 75.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1
script = ExtResource("2_xd4uy")

[node name="ManaUI" parent="BattleUI" instance=ExtResource("10_oiw7q")]
offset_left = 10.0
offset_top = -47.0
offset_right = 34.0
offset_bottom = -27.0

[node name="Tooltip" parent="BattleUI" instance=ExtResource("12_mxe8n")]
offset_top = 7.0
offset_bottom = 47.0

[node name="EndTurnButton" type="Button" parent="BattleUI"]
unique_name_in_owner = true
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -56.0
offset_top = -44.0
offset_right = -8.0
offset_bottom = -28.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("13_icoan")
text = "End Turn"

[node name="DrawPileButton" parent="BattleUI" node_paths=PackedStringArray("counter") instance=ExtResource("17_fe4ja")]
unique_name_in_owner = true
offset_left = 10.0
offset_top = 119.0
offset_right = 26.0
offset_bottom = 139.0
counter = NodePath("DrawCounter")

[node name="DrawCounter" type="Label" parent="BattleUI/DrawPileButton"]
custom_minimum_size = Vector2(10, 8)
layout_mode = 0
offset_left = 12.0
offset_top = 16.0
offset_right = 22.0
offset_bottom = 24.0
theme = ExtResource("13_icoan")
text = "19"
horizontal_alignment = 1

[node name="DiscardPileButton" parent="BattleUI" node_paths=PackedStringArray("counter") instance=ExtResource("17_fe4ja")]
unique_name_in_owner = true
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -24.0
offset_top = -26.0
offset_right = -8.0
offset_bottom = -6.0
grow_horizontal = 0
grow_vertical = 0
texture_normal = ExtResource("18_sgdsx")
counter = NodePath("DiscardCounter")

[node name="DiscardCounter" type="Label" parent="BattleUI/DiscardPileButton"]
custom_minimum_size = Vector2(10, 8)
layout_mode = 0
offset_left = -3.0
offset_top = 16.0
offset_right = 7.0
offset_bottom = 24.0
theme = ExtResource("13_icoan")
text = "19"
horizontal_alignment = 1

[node name="ScreenFlash" type="CanvasLayer" parent="."]
layer = 2
script = ExtResource("15_t1kk3")

[node name="RedColorRect" type="ColorRect" parent="ScreenFlash"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.996078, 0.321569, 0.309804, 0)
metadata/_edit_lock_ = true

[node name="FlashTimer" type="Timer" parent="ScreenFlash"]
wait_time = 0.2
one_shot = true

[node name="BattleOverLayer" type="CanvasLayer" parent="."]
process_mode = 3
layer = 2

[node name="BattleOverPanel" parent="BattleOverLayer" instance=ExtResource("17_6ofp8")]
visible = false

[node name="CardPileViews" type="CanvasLayer" parent="."]
layer = 4

[node name="DrawPileView" parent="CardPileViews" instance=ExtResource("21_sgdsx")]
unique_name_in_owner = true
visible = false

[node name="DiscardPileView" parent="CardPileViews" instance=ExtResource("21_sgdsx")]
unique_name_in_owner = true
visible = false
